--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -37,7 +37,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-gray};
     --global-fig-caption-color          : #6b6f73;
-    --global-link-color                 : #{$sky-color};
+    --global-link-color                 : #{$primary-color};
     --global-link-color-hover           : #{$accent-color};
     --global-link-color-visited         : #1a7aa8;
     --global-masthead-link-color        : #{$navy-color};
